# Crypto_Trading_Strategy_Backtester

./: CMakeLists.txt  README.md
data/: btc_historical.csv  btc_historical_raw.csv  glassnode_loader.h
include/backtester/: backtester.h  performance_metrics.h
include/data/: data_loader.h
include/strategies/: bollinger_bands_strategy.h  rsi_strategy.h  sma_strategy.h  strategy.h
include/utils/: csv_utils.h
scripts/: download_coinapi.py  download_data.py  visualize_results.py
src/: main.cpp
src/backtester/: backtester.cpp  backtester.h  performance_metrics.cpp
src/data/: data_loader.cpp  data_loader.h  glassnode_loader.h
src/models/: asset.cpp  asset.h
src/strategies/: bollinger_bands_strategy.cpp  mean_reversion.cpp  mean_reversion.h  rsi_strategy.cpp  sma_strategy.cpp  strategy.cpp  strategy.h
src/utils/: csv_utils.cpp
test/: test_asset.cpp
